kubernetes-resource/thanhlam-exporter-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: thanhlam-exporter
  name: thanhlam-exporter
spec:
  hostAliases:
  - ip: "20.121.89.64"
    hostnames:
    - "minio.thanhlam.com"
  containers:
  - image: thanhlam2396/thanhlam_exporter:1.0
    name: thanhlam-exporter
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
