kubernetes-resource/ingress-thanhlam-exporter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanhlam-exporter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: thanhlam-exporter.thanhlam.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thanhlam-exporter
            port:
              number: 8000
